applications/development/backend-go/network/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
spec:
  parentRefs:
    - name: course-gateway
      sectionName: http
      namespace: argocd
  hostnames:
    - "localhost"
    - "10.10.10.11"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: svc
          port: 80
